agrego el escneario 6 mesa de piedra con ciclos